--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@codewizard-dt/react-semantic-datetime-picker",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A datetime picker library for React and Semantic UI",
   "scripts": {
-    "rollup": "rollup -c"
+    "test": "jest",
+    "rollup": "rollup -c",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "react",
@@ -15,22 +18,52 @@
   "author": "David Taylor",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/luxon": "^2.3.2",
+    "lodash": "^4.17.21",
     "luxon": "^2.4.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "0.0.11",
+    "@testing-library/react": "^13.2.0",
+    "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
+    "babel-jest": "^28.1.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "rollup": "^2.72.1",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1"
   },
   "main": "dist/cjs/index/js",
   "module": "dist/esm/index.js",
