--- a/package.json
+++ b/package.json
@@ -65,6 +65,14 @@
     "typescript": "^4.6.4",
     "webpack": "^5.72.1"
   },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "lodash": "^4.17.21",
+    "luxon": "^2.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2"
+  },
   "main": "dist/cjs/index/js",
   "module": "dist/esm/index.js",
   "files": [
