--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
-    
+    "baseUrl":".",
+    "paths": {
+      "@util/*": ["./src/util/*"],
+      "@hooks/*": ["./src/hooks/*"]
+    }
     
     /* Projects */
     // "incremental": true,                              /* Enable incremental compilation */
